# ine5417-movies

./: .gitignore  README.md  main.py  requirements.txt
backend/: main.py  pyproject.toml
backend/database/: connection.py  init.sql
backend/database/controllers/: analysis_controller.py  comment_controller.py  entity_controller.py  favorite_controller.py  history_controller.py  search_history_controller.py  tweet_controller.py  user_controller.py  word_controller.py
backend/database/models/: analysis_model.py  comment_model.py  entity_model.py  favorite_model.py  search_history_model.py  tweet_model.py  user_model.py  word_model.py
backend/handlers/: analysis_handler.py  base_handler.py  comment_handler.py  login_handler.py  search_handler.py  user_handler.py
backend/utils/: apis.py  exporter.py  singleton.py
backend/utils/sentiment/: analyser.py  cleaner.py  stemmer.py  tagger.py
backend/utils/sentiment/models/: tagger.pkl
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js  utils.js
frontend/src/components/: Analysis.vue  Favorites.vue  Header.vue  Home.vue  Information.vue  Login.vue  Movie.vue  User.vue
frontend/src/components/shared/: AnalysisData.vue  Header.vue  Heatmap.vue  HorizontalScroll.vue
frontend/src/router/: index.js
old/: main.py
old/utils/: image_tools.py
tests/: main.py  movies.py
utils/: image_sizes.py
