[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
backcall = "0.2.0"
certifi = "2020.6.20"
chardet = "3.0.4"
decorator = "4.4.2"
idna = "2.10"
ipython = "7.16.1"
ipython-genutils = "0.2.0"
jedi = "0.17.2"
oauthlib = "3.1.0"
parso = "0.7.1"
peewee = "3.13.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
Pillow = "6.2.2"
prompt-toolkit = "3.0.6"
ptyprocess = "0.6.0"
Pygments = "2.6.1"
PySocks = "1.7.1"
requests = "2.24.0"
requests-oauthlib = "1.3.0"
six = "1.15.0"
tmdbsimple = "2.6.5"
tornado = "6.0.4"
traitlets = "4.3.3"
tweepy = "3.9.0"
urllib3 = "1.25.10"
wcwidth = "0.2.5"
bcrypt = "3.2.0"
nltk = "^3.5"
gmaps = "^0.9.0"
ipywidgets = "^7.5.1"
matplotlib = "^3.3.2"
wordcloud = "^1.8.0"

[tool.poetry.dev-dependencies]
ipdb = "0.13.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
